RESOLVED FIXED114242
REGRESSION (r147454): Youtube annotation links to new window broken
https://bugs.webkit.org/show_bug.cgi?id=114242
Summary REGRESSION (r147454): Youtube annotation links to new window broken
Kevin M. Dean
Reported 2013-04-08 22:47:29 PDT
Youtube videos with annotation links that open a new window for the video page are no longer working, while links that load a video into the existing page continue to work fine. Load the link above which is cued up to just before the end of a video where some annotation links appear on the screen. Click the one on the left for Behind the Scenes and it pauses the video but doesn't open the new window as it should, while the link on the right for Water Jet Packs loads into the existing page fine. I'm finding this problem on many other videos where the link opens a new window rather than the loading into the existing page anywhere the link annotation may appear throughout the video.
Attachments
Patch (1.65 KB, patch)
2013-04-09 14:15 PDT, Anders Carlsson
no flags
Patch (1.77 KB, patch)
2013-09-10 06:38 PDT, Allan Sandfeld Jensen
no flags
Kevin M. Dean
Comment 1 2013-04-08 22:51:26 PDT
This bug also seems to affect clicking the "Watch on Youtube" button that appears as a Youtube logo on the lower toolbar on embedded pages like: https://online.hillsdale.edu/page.aspx?pid=1893 The new window at youtube.com doesn't open. This was reported in Bug 114097
Alexey Proskuryakov
Comment 2 2013-04-09 09:56:56 PDT
Alexey Proskuryakov
Comment 3 2013-04-09 10:00:51 PDT
*** Bug 114097 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4 2013-04-09 10:01:12 PDT
jochen
Comment 5 2013-04-09 12:05:24 PDT
that's bad, sorry will investigate & fix
Anders Carlsson
Comment 6 2013-04-09 14:15:25 PDT
Anders Carlsson
Comment 7 2013-04-09 14:34:27 PDT
Allan Sandfeld Jensen
Comment 8 2013-09-10 06:36:13 PDT
The same needs to be done for WebKit1.
Allan Sandfeld Jensen
Comment 9 2013-09-10 06:38:45 PDT
Anders Carlsson
Comment 10 2013-09-10 08:26:03 PDT
Comment on attachment 211195 [details] Patch Looks good. Next time please open a new bug instead of re-using one that's already been closed.
WebKit Commit Bot
Comment 11 2013-09-10 09:01:42 PDT
Comment on attachment 211195 [details] Patch Clearing flags on attachment: 211195 Committed r155447: <http://trac.webkit.org/changeset/155447>
WebKit Commit Bot
Comment 12 2013-09-10 09:01:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.