REGRESSION (r147454): Youtube annotation links to new window broken https://bugs.webkit.org/show_bug.cgi?id=114242 <rdar://problem/13609940>

Reviewed by Beth Dakin.

Set the current user gesture to "DefinitelyProcessingNewUserGesture" if popups are allowed.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::performFrameLoadURLRequest):

Canonical link: https://commits.webkit.org/132675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148054 268f45cc-cd09-0410-ab3c-d52691b4dbfc